--- a/PROJET_ASI/Pages/Logements/Create.cshtml
+++ b/PROJET_ASI/Pages/Logements/Create.cshtml
@@ -35,11 +35,18 @@
             </div>
             <div class="form-group">
                 <label asp-for="Logement.ProprietaireID" class="control-label">Propriétaire</label>
-                <select asp-for="Logement.ProprietaireID" class="form-control" asp-items="ViewBag.ProprietaireID"></select>
+                <select asp-for="Logement.ProprietaireID" class="form-control" asp-items="ViewBag.ProprietairesIDs"></select>
             </div>
+
+            <!-- Une liste déroulante des équipements -->
+            <div class="form-group">
+                <label asp-for="selectedEquipementsIds" class="control-label">Equipements</label>
+                <select asp-for="selectedEquipementsIds" class="form-control" asp-items="ViewBag.EquipementsIDs" multiple name="selectedEquipementsIds"></select>
+            </div>
+
             <div class="form-group">
                 <input type="submit" value="Ajouter" class="btn btn-primary" />
-            </div>
+            </}>
         </form>
     </div>
 </div>
