Conditionnement supplémentaire réservations

--- a/PROJET_ASI/Pages/Logements/Details.cshtml
+++ b/PROJET_ASI/Pages/Logements/Details.cshtml
@@ -107,4 +107,8 @@
     <a asp-page="../Proprietaires/Details" asp-route-id="@Model.Logement.ProprietaireID">Voir le propriétaire</a> |
     <a asp-page="./Edit" asp-route-id="@Model.Logement.ID">Modifier</a> |
     <a asp-page="./Index">Retour aux logements</a>
+
+
+    <a asp-page="./Index">Retour aux logements</a>
+    
 </div>
